@@ -266,6 +266,9 @@ Bug fixes
   at a performance cost.  CachingSpanFilter by default recaches if
   there are new deletions (Shay Banon via Mike McCandless)
 
+* LUCENE-2299: If you open an NRT reader while addIndexes* is running,
+  it may miss some segments (Earwin Burrfoot via Mike McCandless)
+
 New features
 
 * LUCENE-2128: Parallelized fetching document frequencies during weight
